WindGroup Dev/src/objects/Invoice_Receipt__c.object
<CustomObject>
    <fields>
        <fullName>Amount__c</fullName>
        <label>Amount</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Currency_Code__c</fullName>
        <label>Currency Code</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Currency_Code</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Goods_Receipt__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Goods Receipt</label>
        <referenceTo>Goods_Receipt__c</referenceTo>
        <relationshipLabel>Invoice Receipts</relationshipLabel>
        <relationshipName>Invoice_Receipts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Invoice_Date__c</fullName>
        <label>Invoice Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Invoice_Due_Date__c</fullName>
        <label>Invoice Due Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Invoice_Number__c</fullName>
        <label>Invoice Number</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PO_Payment_Arrangement__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>PO Payment Arrangement</label>
        <referenceTo>PO_Payment_Arrangement__c</referenceTo>
        <relationshipLabel>Invoice Receipts</relationshipLabel>
        <relationshipName>Invoice_Receipts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Purchase_Order__c</fullName>
        <label>Purchase Order</label>
        <referenceTo>Purchase_Order__c</referenceTo>
        <relationshipLabel>Invoice Receipts</relationshipLabel>
        <relationshipName>Invoice_Receipts</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Draft</fullName>
                    <default>true</default>
                </value>
                <value>
                    <fullName>In-Approval</fullName>
                </value>
                <value>
                    <fullName>Paid</fullName>
                </value>
                <value>
                    <fullName>Void</fullName>
                </value>
                <value>
                    <fullName>Approved</fullName>
                </value>
                <value>
                    <fullName>Rejected</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Tax__c</fullName>
        <label>Tax</label>
        <precision>8</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_Amount__c</fullName>
        <formula>Amount__c  +  Tax__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Vendor_Name__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Vendor Name</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Invoice Receipts</relationshipLabel>
        <relationshipName>Invoice_Receipts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Void_Datetime__c</fullName>
        <label>Void Datetime</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Void_Reason__c</fullName>
        <label>Void Reason</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Invoice Receipt</label>
    <nameField>
        <displayFormat>{YYYY}{MM}-IR-{000000}</displayFormat>
        <label>Invoice Receipt No</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Invoice Receipts</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>Can_only_edited_for_PO_Status_Draft</fullName>
        <active>false</active>
        <description>Invoice Receipt can only be edited for PO Status Draft</description>
        <errorConditionFormula>And(NOT(OR(ISPICKVAL(Purchase_Order__r.Status__c,&apos;Draft&apos;),ISPICKVAL(Purchase_Order__r.Status__c,&apos;Rejected&apos;))),NOT( Purchase_Order__r.PO_Line_Validation_Bypass__c ))</errorConditionFormula>
        <errorMessage>Invoice Receipt can only be updated if PO Status is &apos;Draft&apos; or &apos;Rejected&apos;</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Check_for_particular_po_payment_arrang</fullName>
        <active>false</active>
        <errorConditionFormula>PO_Payment_Arrangement__r.Invoice_Created__c = True</errorConditionFormula>
        <errorDisplayField>Amount__c</errorDisplayField>
        <errorMessage>Invoice is already generated for this Payment Arrangement</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Create_if_PO_status_is_issued</fullName>
        <active>true</active>
        <description>Invoice Receipt can only be created if the Purchase Order status is issued</description>
        <errorConditionFormula>AND(NOT(ISPICKVAL(Purchase_Order__r.Status__c,&apos;Issued&apos;)),ISNEW())</errorConditionFormula>
        <errorMessage>Invoice Receipt can only be created if PO Status is Issued</errorMessage>
    </validationRules>
</CustomObject>